--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.6.8",
+    "chart.js": "^4.4.3",
+    "cors": "^2.8.5",
     "primeicons": "^7.0.0",
     "primereact": "^10.6.3",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
+    "react-scroll": "^1.9.0",
     "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
